Fixed spacing and alignment issues, changed font sizing

--- a/layout/style-index.css
+++ b/layout/style-index.css
@@ -1,9 +1,14 @@
-main {
+body {
   background-image: linear-gradient(rgba(51, 49, 206, 0.65), rgba(204, 206, 49, 0.50)), url(../images/dev2collab.jpeg);
-  background-size: 130%;
+  background-size: 152%;
+  background-attachment: fixed;
+}
+
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
 }
 
 header {
@@ -12,13 +17,12 @@ header {
 }
 
 #title {
-  font-size: 2.5rem;
-  /* font-size: 5vw; */
+  font-size: 2.4rem;
 }
 
 #subhead {
   font-style: italic;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 #survey-form {
@@ -27,22 +31,36 @@ header {
   font-weight: bold;
   color: rgb(203, 206, 54);
   /* color: rgb(134, 136, 29); */
-  background-color: rgba(43, 41, 175, 0.75);
+  background-color: rgba(43, 41, 175, 0.85);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   border-style: solid;
-  padding: 1.25rem;
-  flex-basis: 50rem;
+  padding: 1rem 1.25rem 1.25rem 0.5rem;
+  flex-basis: 62rem;
 }
 
 .input-fields {
   font-size: 1.1rem;
+  position: relative;
+  top: -0.5rem;
 }
 
 [type="radio"] {
   margin: 0 15px 7px 0;
-  /* width: 25px; */
+  position: relative;
+  top: 0rem;
+}
+
+select {
+  font-size: 1.1rem;
+  position: relative;
+  top: -0.5rem;
+}
+
+[type="checkbox"] {
+  position: relative;
+  top: 0rem;
 }
 
 #radios {
@@ -65,13 +83,21 @@ header {
   margin: 0 15rem 0 0;
 }
 
+#text-area {
+  position: relative;
+  top: -1.5rem;
+}
+
 #buttons {
   align-self: center;
+  position: relative;
+  top: -1rem;
+  font-weight: bold;
 }
 
 button {
   font-family: "Turret Road";
   font-size: 1.1rem;
-  margin: 2em 1em 0 1em;
-  padding: 0.25em 1em 0.25em 1em;
+  margin: 2em 0.75em 0 0.75em;
+  padding: 0.25em 1em 0em 1em;
 }
